--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 .App {
-  text-align: center;
+  padding: 30px;
+  background-color: floral-white;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +36,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
